# Labs_PC

./: CMakeLists.txt  lab_2_atomic.cpp  lab_2_simp.cpp  lab_2_threads.cpp  main.cpp  parallel.cpp  poslidovno.cpp
